# Projet_WebScraping

./: .annonces_autoscout24.json.icloud  .coverage  MachineLearning.py  README.md  Scrapping selenium autodoc24.py  Scrapping_selenium_autodoc24.py  Voiture app.py  Voiture_app.py  annonces_autoscout24.json  annonces_autoscout24_bot_test.json  autoscout_clean_ml.xlsx  circuits.json  circuits2.json  cleaning.py  data.txt  hello.py  liste_annonces.json  pyproject.toml  scraping.py  scraping2.py  scraping2point0.py  voitures_nettoyees.json
LeBazar/: scraping_statsf1.py
Page HTML/: Annonce Mercedes classe b ii 200 cdi business 7g-dct 2013 DIESEL occasion - Loiret 45.html  Audi Q3 SUV 29 991.html  Audi Q3 SUV:4x4:Pick-Up en Gris occasion à Tourves pour € 29 991.html  Formula 1 World Championship (1950 - 2024) constructor result.html  Formula 1 World Championship (1950 - 2024) constructor standing.html  Formula 1 World Championship (1950 - 2024).html  Voitures d'occasion sur AutoScout24.html
exports/: .pitStop_20251119_135402.json.icloud  .results_20251119_121228.json.icloud  circuits_20251031_183226.json  circuits_20251119_103241.json  constructorResults_20251031_183100.json  constructorResults_20251031_184207.json  constructorResults_20251119_104007.json  constructorStandings_20251031_183115.json  constructors_20251031_183131.json  driverStanding_20251119_111558.json  pitStop_20251119_135402.json  statuts_20251119_121359.json
models/: .random_forest_model.pkl.icloud  analyse_clusters.xlsx  best_xgb_final.pkl  cluster_full_pipeline.pkl  comparaison_modeles.xlsx  (+10 more)
(+1246 files in other folders)
