[project]
name = "projet-webscraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "fastexcel>=0.18.0",
    "lxml>=6.0.2",
    "plotly>=6.5.1",
    "polars>=1.36.1",
    "pydantic>=2.12.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "selenium>=4.38.0",
    "streamlit>=1.52.2",
    "streamlit-tile>=4.1.0",
    "xgboost>=3.1.3",
]
